--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.4.0",
     "bluebird": "^3.5.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "requestretry": "^1.12.0"
   }
 }
